# SupermilageDisplay

./: .gitignore  .gitmodules  .gitmodules.orig  AppProfile 2022-09-01 15:07:27.json  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  CMakeSettings.json.orig  CNAME  Doxyfile  README.md  README.md.orig  Speedometer.cpp  Speedometer.h  data.txt  readme.txt
.github/workflows/: compile-test.yaml  create-docs.yaml
Instructions/: LinuxSetup.md  WindowsSetup.md
MQTTComunication/: CMakeLists.txt  ComCenter.h  CommsInterface.h  Delegate.h  SerialClient.cpp  SerialClient.h  mqttClient.cpp  mqttClient.h
PacketTypes/: header.idl  velocity.idl
Profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h
Serial/: CMakeLists.txt  SerialClient.cpp  SerialClient.h
SuperMileageDisplay/: CMakeLists.txt  ColorLight.cpp  ColorLight.h  Constants.h  DataValues.cpp  DataValues.h  Formatter.h  ISizeable.h  LapCounter.cpp  LapCounter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MapComponent.cpp  MapComponent.h  ProgressBar.cpp  RaceTimer.cpp  SizeableSpeedometer.cpp  Sizer.cpp  Sizer.h  Speedometer.cpp  Speedometer.h  Stopwatch.cpp  Stopwatch.h  SuperMileageDisplay.cpp  SuperMileageDisplay.h  Tiltmeter.cpp  Tiltmeter.h  Vertices.cpp  Vertices.h  VerticleGauge.cpp  VerticleGauge.h
html/: ArduinoDriver_8h_source.html  BurnLight_8h_source.html  ClickLayer_8h_source.html  ColorLight_8h_source.html  Constants_8h_source.html  LapCounter_8h_source.html  Length_8h_source.html  MainComponent_8h_source.html  MapComponent_8h_source.html  Profiler_8h_source.html  RaceTimer_8h_source.html  Speedometer_8h_source.html  Tiltmeter_8h_source.html  TripleLight_8h_source.html  USB_8h_source.html  VerticleGaugeMir_8h_source.html  VerticleGauge_8h_source.html  WindDir_8h_source.html  annotated.html  classBurnLight-members.html  classBurnLight.html  classBurnLight__coll__graph.map  classBurnLight__coll__graph.md5  classCentimeters-members.html  classCentimeters.html  classCentimeters__inherit__graph.map  classCentimeters__inherit__graph.md5  classClickLayer-members.html  classClickLayer.html  classClickLayer__coll__graph.map  classClickLayer__inherit__graph.md5  classColorLight-members.html  classColorLight.html  classColorLight__coll__graph.map  classColorLight__inherit__graph.md5  classFeet-members.html  classFeet.html  classFeet__inherit__graph.map  classFeet__inherit__graph.md5  classInches-members.html  (+121 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
include/Communication/: CommunicationManager.h  FastDDS.h  Topic.h
include/Communication/PacketTypes/: header.h  headerPubSubTypes.h  headerTypeObject.h  velocity.h  velocityPubSubTypes.h  velocityTypeObject.h
include/Display/: BurnLight.h  ClickLayer.h  ColorLight.h  Constants.h  LapCounter.h  MainComponent.h  MapComponent.h  RaceTimer.h  Speedometer.h  Tiltmeter.h  TripleLight.h  VerticleGauge.h  VerticleGaugeMir.h  WindDir.h
include/Profiler/: Profiler.h
include/Serial/: ArduinoDriver.h  NewSerialClient.h  USB.h
include/Units/: Length.h
latex/: annotated.tex  classBurnLight.tex  classBurnLight__coll__graph.md5  classCentimeters.tex  classCentimeters__inherit__graph.md5  classClickLayer.tex  classClickLayer__inherit__graph.md5  classColorLight.tex  classColorLight__inherit__graph.md5  classFeet.tex  classFeet__inherit__graph.md5  classInches.tex  classInches__inherit__graph.md5  classKilometers.tex  classKilometers__coll__graph.md5  classLapCounter.tex  classLapCounter__inherit__graph.md5  classLength.tex  classLength__inherit__graph.md5  classMainComponent.tex  classMainComponent__coll__graph.md5  classMapComponent.tex  classMapComponent__coll__graph.md5  classMapComponent__inherit__graph.md5  classMeters.tex  classMeters__coll__graph.md5  classMiles.tex  classMiles__inherit__graph.md5  classProfiler.tex  classRaceTimer.tex  classRaceTimer__coll__graph.md5  classSpeedometer.tex  classSpeedometer__inherit__graph.md5  classSuperMileageApp.tex  classSuperMileageApp_1_1MainWindow.tex  classSuperMileageApp_1_1MainWindow__coll__graph.md5  classSuperMileageApp__inherit__graph.md5  classTiltmeter.tex  classTiltmeter__inherit__graph.md5  classTracerFile.tex  (+16 more)
lib/: CMakeLists.txt
lib/cmake/: getDDSDeps.cmake
src/: CMakeLists.txt  ColorLight.cpp  ColorLight.h  ISizeable.h  MainComponent.cpp  MainComponent.h  ProgressBar.cpp  ProgressBar.h  SizeableSpeedometer.h  Sizer.cpp  Sizer.h  Speedometer.cpp  Speedometer.h  Vertices.cpp  Vertices.h
src/Communications/: CMakeLists.txt  CommunicationManager.cpp
src/Communications/PacketTypes/: CMakeLists.txt  header.cxx  headerPubSubTypes.cxx  headerTypeObject.cxx  velocity.cxx  velocityPubSubTypes.cxx  velocityTypeObject.cxx
src/Display/: BurnLight.cpp  CMakeLists.txt  ClickLayer.cpp  ColorLight.cpp  LapCounter.cpp  Main.cpp  MainComponent.cpp  MapComponent.cpp  RaceTimer.cpp  Speedometer.cpp  Tiltmeter.cpp  TripleLight.cpp  VerticleGauge.cpp  VerticleGaugeMir.cpp  WindDir.cpp
src/Profiler/: CMakeLists.txt  Profiler.cpp
src/Serial/: ArduinoDriver.cpp  CMakeLists.txt  NewSerialClient.cpp  SerialClient.cpp  USB.cpp
src/Tests/: CMakeLists.txt
src/Units/: CMakeLists.txt  Length.cpp
